# Electric-Vehicle-Charging-Station-Problem

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: maps.json  maps_legacy.json
data/parameters/: hyperparameters.json  problem_parameters.json
docs/: EVCSP_2026.tex  project_documentation.tex  references.bib
src/: Bacterium.cpp  EVCSP.cpp  Evaluator.cpp  LinearProgrammingModel.cpp  Maps.cpp  MetaheuristicModel.cpp  SolutionPrinter.cpp  Validator.cpp  main.cpp  optimize.cpp
src/include/: Bacterium.hpp  EVCSP.hpp  EvaluationContext.hpp  Evaluator.hpp  GurobiModel.hpp  LinearProgrammingModel.hpp  Maps.hpp  MetaheuristicModel.hpp  Model.hpp  Problem.hpp  Solution.hpp  SolutionPrinter.hpp  Validator.hpp
